--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body,
 body {
   font-family: "Outfit", sans-serif;
   color: rgb(92, 73, 73);
-  background-color: #09090b;
+  background-color: white;
 }
 
 /* Chatbot styles (namespaced) */
